# rusty-chaos-craftor

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  manifest.json  rust-toolchain  rusty-chaos-craftor-2d75e7e4c268f386.js  rusty-chaos-craftor-d3b1a3e67843daf4.js  sw.js
.github/workflows/: pages.yml  rust.yml  test.yml
src/: app.rs  chaos.rs  gui.rs  lib.rs  main.rs  utils.rs
src/chaos/: benchmark.rs  data.rs  execution.rs  fractal.rs  functions.rs  labels.rs  particle.rs
src/chaos/data/: chaos_data.rs  chaos_states.rs  data_variants.rs  initial_distribution.rs
src/chaos/execution/: continuous_exec.rs  controller_exec.rs  discrete_exec.rs  executor_variants.rs
src/chaos/fractal/: descriptions.rs  fractal_conf.rs  fractal_data.rs  fractal_generator.rs  julia.rs  mandelbrot.rs  simple_variants.rs
src/chaos/functions/: chaotic_function_configs.rs  differential_eq.rs  discrete_maps.rs
src/chaos/particle/: newton_coloumb.rs  particle_variants.rs
src/gui/: egui_app.rs  plot.rs  tooltips.rs
src/gui/egui_app/: conf_panels.rs  egui_utils.rs  main_panels.rs
src/gui/egui_app/conf_panels/: execute.rs  execute_chaotic_function_view.rs  initial.rs  initial_distribution_view.rs
src/gui/egui_app/main_panels/: benchmark.rs  chaotic_plot.rs
src/gui/plot/: plot_2_d.rs  plot_3_d.rs  plot_backend.rs  plot_colors.rs  plot_data.rs  plot_data_variants.rs  plot_styles.rs  plot_utils.rs
